# windsurfer-todo

./: .eslintrc.json  .gitignore  .pre-commit-config.yaml  README.md  eslint.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: backend_lint_format.yaml  ci.yml  frontend_lint.yaml
backend/: manage.py  pyproject.toml  pytest.ini  requirements.txt
backend/backend/: __init__.py  settings.py  test_settings.py  urls.py
backend/backend/settings/: __init__.py  base.py  local.py  test.py
backend/todos/: __init__.py  admin.py  apps.py  models.py  serializers.py  urls.py  views.py
backend/todos/migrations/: 0001_initial.py  0002_alter_todo_options_todo_order.py  0003_alter_todo_title.py  __init__.py
backend/todos/tests/: conftest.py  factories.py  test_models.py  test_views.py
frontend/: eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  vitest.config.js
frontend/src/: App.vue  main.js
frontend/src/__tests__/: TodoForm.test.js  TodoList.test.js  setup.js
frontend/src/components/: TodoForm.vue  TodoList.vue
frontend/src/components/__tests__/: TodoList.test.js
frontend/src/composables/: useTodos.js
frontend/src/composables/__tests__/: useTodos.test.js
frontend/src/styles/: quasar-variables.scss
